--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@jest/globals": "^29.7.0",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.4.8",
+    "axios-mock-adapter": "^1.22.0",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
@@ -26,7 +27,8 @@
     "typescript-eslint": "^7.16.0"
   },
   "dependencies": {
-    "axios": "^0.21.1",
+    "axios": "^1.7.2",
+    "axios-retry": "^4.4.1",
     "dotenv": "^8.2.0"
   }
 }
